# xlsxto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example.xlsx  example2.xlsx
src/: checker.rs  main.rs  xlsx.rs
src/checker/: and.rs  empty.rs  eq.rs  expect_field.rs  gt.rs  length.rs  lt.rs  not.rs  or.rs  range.rs
src/generator/: json_generator.rs  lua_generator.rs  mod.rs  python_generator.rs  sql_generator.rs
