[package]
name = "xlsxto"
version = "0.1.0"
edition = "2021"
author = "rickhan"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
clap = { version = "4.0.29", features = ["derive"] }
hlua = "0.4.1"
curl = "0.4.44"
lex_lua = "0.1.9"
log = "0.4.21"
env_logger = "0.11.3"
